--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+.back-image {
+   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://pbs.twimg.com/media/DdLCILPV0AAUvtz.jpg);
+   background-size: cover;
+   border-radius: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-class {
+   width: 90%;
+   outline: none;
+   border: none;
+   padding: 8px 12px;
+   border-radius: 10px;
+   margin: 8px 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.text-center {
+   color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.input-class:focus {
+   outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+@media (max-width: 992px) {
+   .container {
+      /* margin: 0 !important; */
+      /* margin-top: 0 !important; */
+      border-radius: 0;
+   }
+   .back-image {
+      border-radius: 0;
+   }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (max-width: 768px) {
+   .container {
+      width: 100vw;
+      margin-top: 0 !important;
+      margin-bottom: 0 !important;
+   }
 }
